tests/bad/value_enums/constructor_no_args.oc
/// fail: Foo::Case1 needs 2 fields to construct

venum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case1
}